# 11pr

./: .gitignore  CMakeLists.txt  csvticketrepository.cpp  csvticketrepository.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  ticketdialog.cpp  ticketdialog.h  ticketdialog.ui  tickettablemodel.cpp  tickettablemodel.h
